<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Captive Network Probe</string>
    <string name="action_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_done">Done</string>
    <string name="action_unknown">Unknown</string>
    <string name="action_exit">Exit</string>
    <string name="app_introduce">Click on the Refresh to test captivation of network</string>
    <string name="ios">Apple iOS</string>
    <string name="wp7">Windows Phone</string>
    
    
    
    <string name="pref_repeat_test">Repeat test</string>
    <string name="pref_repeat_test_summary">every 1 min.</string>
    
    <string name="pref_test_type">Test Type</string>
    <string name="pref_test_type_summary">iOS</string>
    
    <string name="pref_custom_target">Set custom test target URL</string>
    <string name="pref_custom_target_summary">custom test target URL</string>
    <string name="pref_custom_response">Set custom test response</string>
    <string name="pref_custom_response_summary">custom test response</string>

    
            
    
    <string name="pref_update_setting">Application Settings</string>
    
    
</resources>
