<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_icon"
          android:text="status" 
          android:icon="@drawable/ic_state_unknown"
          android:title="@string/action_unknown"
          android:showAsAction="always" />
    
    <item android:id="@+id/action_refresh"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/action_refresh"
          android:width="50px"
          android:showAsAction="always" />
    <!-- Settings, should always be in the overflow -->

    <item
        android:id="@+id/menu_settings"
        ic_menu_preferences=""
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"/>

        
</menu>